[project]
name = "mongo-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Jamezfn",email = "jamesmakachia19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.15.4,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
